--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-simple-star-rating": "^5.1.7",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
