--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "redux-persist": "^6.0.0",
     "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
